--- a/web-client/package.json
+++ b/web-client/package.json
@@ -4,10 +4,14 @@
     "private": true,
     "dependencies": {
         "graphql-request": "^1.3.6",
+        "postcss": "^6.0.12",
+        "postcss-cssnext": "^3.0.2",
         "react": "^15.6.1",
-        "react-dom": "^15.6.1"
+        "react-dom": "^15.6.1",
+        "react-toolbox": "^2.0.0-beta.12"
     },
     "devDependencies": {
+        "postcss-loader": "^2.0.6",
         "react-scripts": "1.0.13"
     },
     "scripts": {
